# dash-observe

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  daily.yml  release.yml
dashobserve/: __init__.py  monitors.py  runner.py  ui.py
docs/api/: dashobserve.html  index.html  search.js
marketplace/: listing.json  quickstart_notebook.py
tests/: test_dashobserve.py  test_discover_tables.py  test_monitors.py  test_runner.py
